--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,36 +8,37 @@ body {
     background-color: #d9dcd6;
 }
 
-.header {
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
-    display: inline-block;
+header h1 {
     font-size: 48px;
+    display: inline-block;
+    width: 20%;
 }
 
-.header h1 .seo {
+header h1 .seo {
     color: #d9dcd6;
 }
 
-.header div {
+ header nav {
     padding-top: 15px;
     margin-right: 20px;
-    float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
-}
+    float: right;
+} 
 
-.header div ul {
+header nav ul {
     list-style-type: none;
-}
+} 
 
-.header div ul li {
-    display: inline-block;
+header nav ul li {
+    display: inline;
     margin-left: 25px;
 }
 
@@ -197,4 +198,22 @@ p {
 
 .footer h2 {
     font-size: 20px;
+}
+.text-left{
+    text-align: left;
+}
+
+.text-right{
+    text-align: right;
+}
+
+.art img{
+    width: 35%;
+    float: left;
+}
+
+.desc{
+    padding: 35px;
+    float: left;
+    width: 65%;
 }
