--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,7 +144,7 @@ p {
     color: #ffffff;
 }
 
-.online-reputation-management {
+.online-reputation {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -166,7 +166,7 @@ p {
     max-height: 200px;
 }
 
-.online-reputation-management img {
+.online-reputation img {
     max-height: 200px;
 }
 
@@ -179,7 +179,7 @@ p {
     font-size: 36px;
 }
 
-.online-reputation-management h2 {
+.online-reputation h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
@@ -189,14 +189,14 @@ p {
     font-size: 36px;
 }
 
-.footer {
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+footer h2 {
     font-size: 20px;
 }
 .text-left{
