--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,7 +107,7 @@ p {
     max-width: 150px;
 }
 
-.search-engine {
+.cont-img {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -116,47 +116,11 @@ p {
     color: #ffffff;
 }
 
-.online-reputation {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine img {
+.cont-img img {
     max-height: 200px;
 }
 
-.online-reputation img {
-    max-height: 200px;
-}
-
-.social-media img {
-    max-height: 200px;
-}
-
-.search-engine h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media h2 {
+.cont-img h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
@@ -177,15 +141,4 @@ footer h2 {
 
 .text-right{
     text-align: right;
-}
-
-.art img{
-    width: 35%;
-    float: left;
-}
-
-.desc{
-    padding: 35px;
-    float: left;
-    width: 65%;
 }
